# Tf-CURE

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/public/: .buildinfo.bak  APIusage.html  CLIusage.html  Changelog.html  Contributing.html  Customization.html  Dataset.html  DatasetForking.html  DatasetOperations.html  DevelopmentGuidelines.html  Examples.FirstPlot.html  Examples.data_manipulation.apply_operations.html  Examples.data_manipulation.html  Examples.html  Features.html  FigureLevelCustomization.html  Installing.html  Plot.html  PlotLevelCustomization.html  UserDefinedFunctions.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  pylint_plugins.html  pylint_plugins.pylint_decorator.html  search.html  searchindex.js  src.context_managers.context_managers.html  src.context_managers.html  src.data_loader.html  src.data_loader.load_base.html  src.data_loader.load_dependent.html  src.data_loader.load_local.html  src.data_loader.load_online.html  src.data_loader.load_pkl.html  src.data_loader.loader.html  src.data_manager.html  (+39 more)
docs/public/.doctrees/: APIusage.doctree  CLIusage.doctree  Changelog.doctree  Contributing.doctree  Customization.doctree  Dataset.doctree  DatasetForking.doctree  DatasetOperations.doctree  DevelopmentGuidelines.doctree  Examples.FirstPlot.doctree  Examples.data_manipulation.apply_operations.doctree  Examples.doctree  (+62 more)
tests/: test_cure_algorithm.py  test_tf_cure_algorithm.py
tf_cure/: __init__.py  main.py
tf_cure/src/: __init__.py  cure.py  tf_cluster.py  tree.py
(+1 files in other folders)
